# machine-bot

./: .funcignore  .gitignore  README.md  function_app.py  local.settings.json  main.py  pyproject.toml  requirements.txt
.github/: master_machine_bot.yml
.github/workflows/: master_machine-bot.yml  master_machine_bot.yml  master_workflow-query.yml
agents/: __init__.py  manual_agent.py  vanilla_agent.py
agents/dispatcher/: __init__.py  config.json  instructions.md
agents/dispatcher_agent/: __init__.py  config.json  instructions.md
agents/maintenance_agent/: __init__.py  config.json  instructions.md
agents/manual_agent/: __init__.py  config.json  instructions.md
functions/: __init__.py  cosmos_listener.py  http_conversation.py  queue_worker.py  timer_cleanup.py
infra/: README.md  main.bicep
infra/modules/: cosmos.bicep  sql.bicep
middleware/: manuals_tool.py  manuals_tools.py
tests/: conftest.py  test_dispatcher_agent.py  test_http_conversation.py  test_manual_agent.py  test_manuals_tool.py  test_manuals_tool_unit.py  test_manuals_tools_unit.py
tests/data/: machine001.md  machine_manual_list.txt
