[project]
name = "machine-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain>=0.3.27",
    "langchain-openai>=0.2.0",
    "langchain-community>=0.3.27",
    "langgraph>=0.6.7",                      
    "azure-functions>=1.20.0",
    "azure-identity>=1.18.0",
    "azure-cosmos>=4.7.0",
    "azure-storage-blob>=12.20.0",
    "sqlalchemy>=2.0.0",
]

[dependency-groups]
dev = [
    "mypy>=1.18.1",
    "pytest>=8.4.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.13.0",
]